--- a/Selenium-Automation-Elearning-Framework-TestNG/resources/others.properties
+++ b/Selenium-Automation-Elearning-Framework-TestNG/resources/others.properties
@@ -1,5 +1,6 @@
 # domain working on 
 baseURL=http://retailm1.upskills.in/
+adminURL=http://retail.upskills.in/admin/
 
 # implicit wait will be in seconds here 
 implicitWait=10
